# DirectX12Portfolio

./: .gitignore  CMakeLists.txt  CreateProject.cmake  DirectX12Portfolio.slnx  LICENSE  README.md
0_Dx12Initialization/: 0_Dx12Initialization.vcxproj  0_Dx12Initialization.vcxproj.filters  Dx12Initalization.cpp  resource.h
1_Dx12Triangle/: 1_Dx12Triangle.vcxproj  1_Triangle.vcxproj.filters  Common.hlsli  Dx12TriangleApplication.cpp  Dx12TriangleApplication.hpp  PixelShader.hlsl  VertexShader.hlsl
2_Dx12ConstantBuffer/: 2_Dx12ConstantBuffer.vcxproj  2_Dx12ConstantBuffer.vcxproj.filters  Common.hlsli  Dx12ConstantBufferApp.cpp  Dx12ConstantBufferApp.hpp  Dx12ConstantBuffer_PixelShader.hlsl  Dx12ConstantBuffer_VertexShader.hlsl  TriangleMesh.hpp  TrianglePipeline.hpp
3_Dx12Textures/: 3_Dx12Textures.vcxproj  3_Dx12Textures.vcxproj.filters  Dx12TexturesApplication.cpp  Dx12TexturesApplication.hpp  TexturePipeline.hpp
3_Dx12TexturesAndMips/: 3_Dx12TexturesAndMips.vcxproj  3_Dx12TexturesAndMips.vcxproj.filters  Common.hlsli  Dx12TexturesApplication.cpp  Dx12TexturesApplication.hpp  Dx12Textures_PixelShader.hlsl  Dx12Textures_VertexShader.hlsl  SquareMesh.hpp  TexturePipeline.hpp
Dx12Framework/: Dx12Application.hpp  Dx12ApplicationLauncher.hpp  Dx12ApplicationLoader.hpp  Dx12CommandQueue.hpp  Dx12DeviceContext.hpp  Dx12Frame.hpp  Dx12Framework.vcxproj  Dx12Framework.vcxproj.filters  Dx12Mesh.hpp  Dx12RenderWindow.hpp  Shared.rc  WinMain.cpp  WindowsApplication.hpp  WindowsClock.hpp  pch.hpp  resource.h
Dx12Framework/shaders/: Dx12ConstantBuffer_PixelShader.cso  Dx12ConstantBuffer_VertexShader.cso  Dx12ShaderResources_PixelShader.cso  Dx12ShaderResources_VertexShader.cso  PixelShader.cso  VertexShader.cso
Engine/Dx12AppLauncher/: CMakeLists.txt  Dx12AppLauncher.cpp  Dx12AppLauncher.hpp  ExampleDescriptorHeapAllocator.hpp  WinMain.cpp
Engine/Dx12Core/: CMakeLists.txt
Engine/Dx12Core/Include/: Dx12.hpp  Dx12Application.hpp  Dx12AssetLoader.hpp  Dx12Camera.hpp  Dx12CommandQueue.hpp  Dx12DeviceContext.hpp  Dx12FlyViewCameraController.hpp  Dx12Frame.hpp  Dx12Mesh.hpp  Dx12RenderWindow.hpp  Keyboard.hpp  WindowsApplication.hpp  WindowsClock.hpp
Engine/Dx12Core/Source/: Dx12AssetLoader.cpp  Dx12CommandQueue.cpp  Dx12DeviceContext.cpp  Dx12Frame.cpp  Dx12RenderWindow.cpp  WindowsApplication.cpp
Projects/Dx12Lighting/: CMakeLists.txt  Common.hlsli  Dx12LightingApp.cpp  Dx12LightingApp.hpp  LightingPipeline.hpp  ModuleUtils.hpp  PixelShader.hlsl  README.md  VertexShader.hlsl
Projects/Dx12Texture/: CMakeLists.txt  Dx12TexturesApplication.cpp  Dx12TexturesApplication.hpp  ReadMe.md  TexturePipeline.hpp
Projects/Dx12Triangle/: CMakeLists.txt  Common.hlsli  Dx12TriangleApp.cpp  Dx12TriangleApp.hpp  PixelShader.hlsl  ReadMe.md  VertexShader.hlsl
Projects/ImGuiTest/: CMakeLists.txt  ImGuiTestApp.cpp  ImGuiTestApp.hpp
Projects/Template/: Dx12App.cpp  Dx12App.hpp  TemplateCMakeLists.txt.in
applications/: 1_DirectX12_Triangle.exp  1_DirectX12_Triangle.lib  1_DirectX12_Triangle_Debug.exp  1_DirectX12_Triangle_Debug.lib  1_Dx12Triangle.exp  1_Dx12Triangle.lib  2_DirectX12_ShaderResources.exp  2_DirectX12_ShaderResources.lib  2_DirectX12_ShaderResources_Debug.exp  2_DirectX12_ShaderResources_Debug.lib  2_Dx12ConstantBuffer.exp  2_Dx12ConstantBuffer.lib  Dx12ShaderResources_PixelShader.cso  Dx12ShaderResources_VertexShader.cso  PixelShader.cso  VertexShader.cso
shaders/: PixelShader.cso  VertexShader.cso
